fixed 1px error in ref file

--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-006.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-006.html
@@ -8,7 +8,7 @@
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#supported-basic-shapes"/>
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#shape-outside-property"/>
     <link rel="match" href="reference/shape-outside-006-ref.html"/>
-    <meta name="flags" content="ahem, svg"/>
+    <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test verifies that content wraps only on one side of 
                                  the float even though there is open area on both the left
                                  and right sides of the float."/>
