--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-004.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-004.html
@@ -23,7 +23,7 @@
             color: green;
         }
         #test-float-left {
-          -webkit-shape-outside: inset(50% 50% 50% 50%);
+          shape-outside: inset(50% 50% 50% 50%);
           float: left;
           width: 200px;
           height: 200px; 
