--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-005.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-005.html
@@ -23,7 +23,7 @@
             color: green;
         }
         #test-float-left {
-          -webkit-shape-outside: inset(150% 150% 0% 0%);
+          shape-outside: inset(150% 150% 0% 0%);
           float: left;
           width: 200px;
           height: 200px; 
