--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-006.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-006.html
@@ -27,7 +27,7 @@
             color: green;
         }
         #test-float-left {
-          -webkit-shape-outside: polygon(50px 0px, 100px 100px, 0px 100px);
+          shape-outside: polygon(50px 0px, 100px 100px, 0px 100px);
           float: left;
           width: 100px;
           height: 100px;
@@ -63,7 +63,7 @@
             width: 100px;
             height: 100px;
             background-color: lightblue;
-            -webkit-clip-path: polygon(50px 0px, 100px 100px, 0px 100px);
+            clip-path: polygon(50px 0px, 100px 100px, 0px 100px);
         }
         
     </style>
