--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-007.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-007.html
@@ -26,7 +26,7 @@
             color: green;
         }
         #test-float-left {
-            -webkit-shape-outside: polygon(0 70px, 50px 120px, 0 120px);
+            shape-outside: polygon(0 70px, 50px 120px, 0 120px);
             float: left;
             width: 100px;
             height: 100px;
@@ -75,7 +75,7 @@
             height: 100px;
             background-color: lightblue;
             margin-left: 2px;
-            -webkit-clip-path: polygon(0% 50%, 50% 100%, 0 100%);;
+            clip-path: polygon(0% 50%, 50% 100%, 0 100%);;
             
         }
     </style>
