--- a/FileAPI/url/url_xmlhttprequest.html
+++ b/FileAPI/url/url_xmlhttprequest.html
@@ -42,7 +42,7 @@
 
           test(function() {
             assert_equals(http.getResponseHeader("Content-Type"), "image/png", "The content type is image/png when set the respnose blob");
-          }, "Check if the content type is image/png when get the image and set the respnose blob");
+          }, "Check if the content type is image/png when get the image and set the response blob");
           this.done();
         });
 
