--- a/contributors/mozilla/submitted/mozilla-central-reftests/flexbox/flexbox-baseline-multi-line-vert-1-ref.html
+++ b/contributors/mozilla/submitted/mozilla-central-reftests/flexbox/flexbox-baseline-multi-line-vert-1-ref.html
@@ -6,7 +6,7 @@
 <!-- Reference case, using inline-block instead of inline-flex, and with the
      baseline-aligned items aligned using specific font-size / line-heights,
      and with unaligned children taken out of baseline-alignment using
-     "vertical-align:top".
+     "float: left".
 -->
 <html>
 <head>
@@ -17,15 +17,11 @@
     .flexContainer {
       display: inline-block;
       width: 40px;
-      /* Split testcase's 40px height into 20px of padding-top and 20px of
-         height, to set aside space for the testcase's (invisible) second line
-         (which is above the first line, since this is wrap-reverse) */
-      height: 20px;
-      padding-top: 20px;
+      height: 40px;
       background: lightblue;
     }
     .flexContainer > * {
-      width: 20px;
+      height: 20px;
       display: inline-block;
     }
 
@@ -41,7 +37,7 @@
       font-size: 16px;
       line-height: 16px;
     }
-    .unaligned { vertical-align: top }
+    .unaligned { float: left }
   </style>
 </head>
 <body>
@@ -49,19 +45,19 @@
   <!-- Flex containers with flex items that have a mix of baselines: -->
   <div class="flexContainer medFont">
     <div class="medFont">b</div
-    ><div class="bigFont unaligned">c</div>
+    ><br><div class="bigFont unaligned">c</div>
   </div>
 
   <div class="flexContainer bigFont">
     <div class="bigFont">f</div
-    ><div class="smallFont unaligned">g</div>
+    ><br><div class="smallFont unaligned">g</div>
   </div>
 
   <!-- Flex container with second line baseline-aligned
        (shouldn't make a difference) -->
   <div class="flexContainer smallFont">
     <div class="smallFont">j</div
-    ><div class="bigFont unaligned">k</div>
+    ><br><div class="bigFont unaligned">k</div>
   </div>
   n
 
