--- a/contributors/mozilla/submitted/mozilla-central-reftests/flexbox/flexbox-baseline-multi-line-vert-1.html
+++ b/contributors/mozilla/submitted/mozilla-central-reftests/flexbox/flexbox-baseline-multi-line-vert-1.html
@@ -3,7 +3,7 @@
      Any copyright is dedicated to the Public Domain.
      http://creativecommons.org/publicdomain/zero/1.0/
 -->
-<!-- Testcase for how we compute the baseline of a horizontal flex container
+<!-- Testcase for how we compute the baseline of a vertical flex container
      with several flex lines.
      The spec says this about this case:
       [Given that the first line has no baseline-aligned items:]
@@ -14,21 +14,22 @@
 -->
 <html>
 <head>
-  <title>CSS Test: Testing the baseline of a horizontal flex container with multiple flex lines</title>
+  <title>CSS Test: Testing the baseline of a vertical flex container with multiple flex lines</title>
   <link rel="author" title="Daniel Holbert" href="mailto:dholbert@mozilla.com">
   <link rel="help" href="http://www.w3.org/TR/css3-flexbox/#flex-baselines">
-  <link rel="match" href="flexbox-baseline-multi-line-horiz-1-ref.html">
+  <link rel="match" href="flexbox-baseline-multi-line-vert-1-ref.html">
   <meta charset="utf-8">
   <style>
     .flexContainer {
       display: inline-flex;
+      flex-direction: column;
       flex-wrap: wrap;
       width: 40px;
       height: 40px;
       background: lightblue;
     }
     .flexContainer > * {
-      width: 20px;
+      height: 20px;
     }
 
     /* We'll make the second flex line not paint anything, so that the
