--- a/FileAPI/BlobURL/Blob-File-URL-Test3.html
+++ b/FileAPI/BlobURL/Blob-File-URL-Test3.html
@@ -33,55 +33,51 @@
 
         on_event(fileChooser, 'change', function() {
 
-            (function() {
 
-                var t = async_test('Check whether the iframe content could be accessed when using Blob/File URL in the same origin.');
-                t.step(function() {
-
-
-                    var url = URL.createObjectURL(fileChooser.files[0]);
-
-                    var e = document.createElement('iframe');
-                    e.setAttribute('src', url);
-                    e.setAttribute('style', 'display:none;width:100px;height:100px;border:0;');
-                    document.body.appendChild(e);
-
-                    e.contentWindow.document.body.onload = t.step_func_done(function() {
-
-                        assert_equals(this.result, 'OK');
-                        t.done();
-
-                    }, e.contentWindow);
-
-                });
-
-            })();
+            var t1 = async_test('Check whether the iframe content could be accessed when using Blob/File URL in the same origin.');
+            t1.step(function() {
 
 
-            (function() {
+                var url = URL.createObjectURL(fileChooser.files[0]);
 
-                var t = async_test('Check whether the Blob/File URL fragment is implemented.');
-                t.step(function() {
+                var e = document.createElement('iframe');
+                e.setAttribute('src', url);
+                e.setAttribute('style', 'display:none;width:100px;height:100px;border:0;');
+                document.body.appendChild(e);
+
+                e.contentWindow.document.body.onload = t1.step_func_done(function() {
+
+                    assert_equals(this.result, 'OK');
+                    t1.done();
+
+                }, e.contentWindow);
+
+            });
 
 
-                    var url = URL.createObjectURL(fileChooser.files[0]);
-                    url += '#block2';
 
-                    var e = document.createElement('iframe');
-                    e.setAttribute('src', url);
-                    e.setAttribute('style', 'width:100px;height:100px;border:0;');
-                    document.body.appendChild(e);
 
-                    e.contentWindow.document.body.onload = t.step_func_done(function() {
+            var t2 = async_test('Check whether the Blob/File URL fragment is implemented.');
+            t2.step(function() {
 
-                        assert_equals(this.scrollY.toString(), '5000', '(You should see a green box below)');
-                        t.done();
 
-                    }, e.contentWindow);
+                var url = URL.createObjectURL(fileChooser.files[0]);
+                url += '#block2';
 
-                });
+                var e = document.createElement('iframe');
+                e.setAttribute('src', url);
+                e.setAttribute('style', 'width:100px;height:100px;border:0;');
+                document.body.appendChild(e);
 
-            })();
+                e.contentWindow.document.body.onload = t2.step_func_done(function() {
+
+                    assert_equals(this.scrollY.toString(), '5000', '(You should see a green box below)');
+                    t2.done();
+
+                }, e.contentWindow);
+
+            });
+
 
 
             done();
