--- a/FileAPI/FileReader/FileReader-Errors-Test1.html
+++ b/FileAPI/FileReader/FileReader-Errors-Test1.html
@@ -35,48 +35,36 @@
 
         on_event(fileChooser, 'change', function() {
 
-            (function() {
+            var t = async_test('FileReader.error should be null if there are no errors when reading');
+            t.step(function() {
 
-                var t = async_test('FileReader.error should be null if there are no errors when reading');
-                t.step(function() {
+                var reader = new FileReader();
+                reader.readAsArrayBuffer(fileChooser.files[0]);
 
-                    var reader = new FileReader();
-                    reader.readAsArrayBuffer(fileChooser.files[0]);
+                reader.onloadend = t.step_func_done(function(event) {
+                    assert_equals(event.target.readyState, FileReader.DONE);
+                    assert_equals(this.error, null);
+                }, reader);
 
-                    reader.onloadend = t.step_func_done(function(event) {
-                        if (event.target.readyState == FileReader.DONE) {
-                            assert_equals(this.error, null);
-                            t.done();
-                        }
-                    }, reader);
-
-                });
-
-            })();
+            });
 
         });
 
         on_event(document.querySelector('#start'), 'click', function() {
 
-            (function() {
+            var t = async_test('FileReader.error should be NOT_FOUND_ERR if the file is not found when reading');
+            t.step(function() {
 
-                var t = async_test('FileReader.error should be NOT_FOUND_ERR if the file is not found when reading');
-                t.step(function() {
+                var reader = new FileReader();
+                reader.readAsArrayBuffer(fileChooser.files[0]);
 
-                    var reader = new FileReader();
-                    reader.readAsArrayBuffer(fileChooser.files[0]);
+                reader.onloadend = t.step_func_done(function(event) {
+                    assert_equals(event.target.readyState, FileReader.DONE);
+                    assert_equals(this.error.code, 1);
+                    t.done();
+                }, reader);
 
-                    reader.onloadend = t.step_func_done(function(event) {
-                        if (event.target.readyState == FileReader.DONE) {
-                            assert_equals(this.error.code, 1);
-                            t.done();
-                        }
-                    }, reader);
-
-                });
-
-            })();
-
+            });
 
             done();
 
