--- a/FileAPI/BlobURL/Blob-File-URL-Test1.html
+++ b/FileAPI/BlobURL/Blob-File-URL-Test1.html
@@ -40,7 +40,6 @@
             test(function() {
                 
                 var list = [], file = fileChooser.files[0];
-                
 
                 for (var i = 0; i <= testCount; i++) {
                     list.push(window.URL.createObjectURL(file));
@@ -57,12 +56,7 @@
 
 
 
-
-
-
-            var t1 = async_test('Check whether Blob/File URL could be used in XHR requests and could get expected data');
-            t1.step(function() {
-
+            async_test(function(t) {
 
                 var url = URL.createObjectURL(fileChooser.files[0]);
                 var expected_file_content = "var test_result = 'OK';";
@@ -73,12 +67,12 @@
 
                     if (this.readyState == 4) {
 
-                        t1.step_func_done(function() {
+                        t.step_func_done(function() {
 
                             assert_equals(this.status, 200, 'status code should be 200');
                             assert_equals(this.responseText, expected_file_content);
 
-                            t1.done();
+                            t.done();
 
                         }, this)();
 
@@ -86,18 +80,13 @@
                 }
                 xhr.send();
 
-            });
+            }, 'Check whether Blob/File URL could be used in XHR requests and could get expected data');
 
 
 
 
 
-
-
-
-            var t2 = async_test('Check whether Blob/File URL could be used in tags src like <script>');
-            t2.step(function() {
-
+            async_test(function(t) {
 
                 var url = URL.createObjectURL(fileChooser.files[0]);
                 var expected_run_result = "OK";
@@ -109,27 +98,21 @@
                 e.setAttribute('type', 'text/javascript');
                 e.setAttribute('src', url);
 
-                e.onload = t2.step_func_done(function() {
+                e.onload = t.step_func_done(function() {
 
                     assert_equals(test_result, expected_run_result);
-                    t2.done();
+                    t.done();
 
                 }, e);
 
                 document.body.appendChild(e);
 
-            });
+            }, 'Check whether Blob/File URL could be used in tags src like <script>');
 
 
 
 
-
-
-
-
-            var t3 = async_test('Check whether revokeObjectURL works well');
-            t3.step(function() {
-
+            async_test(function(t) {
 
                 var url = URL.createObjectURL(fileChooser.files[0]);
                 URL.revokeObjectURL(url);
@@ -140,10 +123,10 @@
 
                     if (this.readyState == 4) {
 
-                        t3.step_func_done(function() {
+                        t.step_func_done(function() {
 
                             assert_equals(this.status, 500, 'status code should be 500 if Blob URI is revoked.');
-                            t3.done();
+                            t.done();
 
                         }, this)();
 
@@ -151,7 +134,7 @@
                 }
                 xhr.send();
 
-            });
+            }, 'Check whether revokeObjectURL works well');
 
 
 
