--- a/FileAPI/BlobURL/Blob-File-URL-Test2.html
+++ b/FileAPI/BlobURL/Blob-File-URL-Test2.html
@@ -42,19 +42,19 @@
 
                 var xhr = new XMLHttpRequest();
                 xhr.open('GET', url, true);
-                xhr.onreadystatechange = function(e) {
+                xhr.onreadystatechange = t.step_func(function() {
 
-                    if (this.readyState == 4) {
+                    switch (xhr.readyState) {
+                    case xhr.DONE:
 
-                        t.step_func_done(function() {
-
-                            assert_equals(this.status, 500, 'status code should be 500.');
-                            t.done();
-
-                        }, this)();
+                        assert_equals(xhr.status, 500, 'status code should be 500.');
+                        t.done();
+                        return;
 
                     }
-                }
+
+                });
+
                 xhr.send();
 
             }, 'Check whether the browser response 500 in XHR if the selected file which File/Blob URL refered is not found');
