--- a/FileAPI/BlobURL/Blob-File-URL-Test3.html
+++ b/FileAPI/BlobURL/Blob-File-URL-Test3.html
@@ -33,14 +33,13 @@
 
         on_event(fileChooser, 'change', function() {
 
-
             async_test(function(t) {
 
                 var url = URL.createObjectURL(fileChooser.files[0]);
 
                 var e = document.createElement('iframe');
                 e.setAttribute('src', url);
-                e.setAttribute('style', 'display:none;width:100px;height:100px;border:0;');
+                e.setAttribute('style', 'display:none;');
                 document.body.appendChild(e);
 
                 e.contentWindow.document.body.onload = t.step_func_done(function() {
@@ -48,9 +47,6 @@
                 }, e.contentWindow);
 
             }, 'Check whether the iframe content could be accessed when using Blob/File URL in the same origin.');
-
-
-
 
             async_test(function(t) {
 
@@ -67,12 +63,9 @@
 
             }, 'Check whether the Blob/File URL fragment is implemented.');
 
-
-
             done();
 
         });
-        
 
     </script>
 </body>
