--- a/FileAPI/FileReader/FileReader-Errors-Test1.html
+++ b/FileAPI/FileReader/FileReader-Errors-Test1.html
@@ -42,8 +42,8 @@
 
                 reader.onloadend = t.step_func_done(function(event) {
                     assert_equals(event.target.readyState, FileReader.DONE);
-                    assert_equals(this.error, null);
-                }, reader);
+                    assert_equals(reader.error, null);
+                });
 
             }, 'FileReader.error should be null if there are no errors when reading');
 
@@ -58,8 +58,8 @@
 
                 reader.onloadend = t.step_func_done(function(event) {
                     assert_equals(event.target.readyState, FileReader.DONE);
-                    assert_equals(this.error.code, 8);
-                }, reader);
+                    assert_equals(reader.error.code, 8);
+                });
 
             }, 'FileReader.error should be NOT_FOUND_ERR if the file is not found when reading');
 
