--- a/FileAPI/BlobURL/test3_manual.html
+++ b/FileAPI/BlobURL/test3_manual.html
@@ -58,7 +58,7 @@
                 document.body.appendChild(e);
 
                 e.contentWindow.document.body.onload = t.step_func_done(function() {
-                    assert_equals(e.contentWindow.scrollY.toString(), 5000);
+                    assert_equals(e.contentWindow.scrollY, 5000);
                 });
 
             }, 'Check whether the Blob/File URL fragment is implemented.');
