added quotes for <meta charset...>

--- a/FileAPI/BlobURL/test1_manual.html
+++ b/FileAPI/BlobURL/test1_manual.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <head>
-<meta charset=utf-8>
+<meta charset="utf-8">
 <title>Blob and File reference URL Test(1)</title>
 <link rel=help href="http://www.w3.org/TR/FileAPI/#convenienceAPI">
 <link rel=author title="Breezewish" href="mailto:me@breeswish.org">
