--- a/FileAPI/FileReader/test_errors_manual.html
+++ b/FileAPI/FileReader/test_errors_manual.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 <head>
-<meta charset=utf-8>
-<title>FileReader Errors Test (1)</title>
+<meta charset="utf-8">
+<title>FileReader Errors Test</title>
 <link rel=help href="http://www.w3.org/TR/FileAPI/#convenienceAPI">
 <link rel=author title="Breezewish" href="mailto:me@breeswish.org">
 <script src="/resources/testharness.js"></script>
