--- a/FileAPI/BlobURL/support/file_test2.html
+++ b/FileAPI/BlobURL/support/file_test2.html
@@ -10,12 +10,6 @@
         .block {
             height: 5000px;
         }
-        #block1_block {
-            background: red;
-        }
-        #block2_block {
-            background: green;
-        }
     </style>
     <script>
         window.result = 'OK';
@@ -23,9 +17,9 @@
 </head>
 <body>
     <a id="block1"></a>
-    <div id="block1_block" class="block"></div>
-    
+    <div class="block"></div>
+
     <a id="block2"></a>
-    <div id="block2_block" class="block"></div>
+    <div class="block"></div>
 </body>
 </html>
