separate test resources

--- a/FileAPI/BlobURL/support/file_test3.html
+++ b/FileAPI/BlobURL/support/file_test3.html
@@ -12,7 +12,7 @@
         }
     </style>
     <script>
-        window.result = 'OK';
+        window.test_result = 'test3_OK';
     </script>
 </head>
 <body>
