--- a/FileAPI/BlobURL/test2_manual.html
+++ b/FileAPI/BlobURL/test2_manual.html
@@ -16,7 +16,7 @@
     <div>
         <p>Test steps:</p>
         <ol>
-            <li>Download the <a href="support/file_test1.js">file</a>.</li>
+            <li>Download the <a href="support/file_test2.txt">file</a>.</li>
             <li>Select the file in the file inputbox.</li>
             <li>Delete the file.</li>
             <li>Click the 'start' button.</li>
