--- a/FileAPI/BlobURL/test3_manual.html
+++ b/FileAPI/BlobURL/test3_manual.html
@@ -16,7 +16,7 @@
     <div>
         <p>Test steps:</p>
         <ol>
-            <li>Download the <a href="support/file_test2.html">file</a>.</li>
+            <li>Download the <a href="support/file_test3.html">file</a>.</li>
             <li>Select the file in the file inputbox and the test will start.</li>
         </ol>
     </div>
@@ -42,7 +42,7 @@
                 document.body.appendChild(e);
 
                 e.contentWindow.document.body.onload = t.step_func_done(function() {
-                    assert_equals(e.contentWindow.result, 'OK');
+                    assert_equals(e.contentWindow.test_result, 'test3_OK');
                 });
 
             }, 'Check whether the iframe content could be accessed when using Blob/File URL in the same origin.');
