Rewrite infraware tests on appcache

--- a/html/browsers/offline/browser-state/navigator_online_event-manual.html
+++ b/html/browsers/offline/browser-state/navigator_online_event-manual.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>Offline Application Cache</title>
-  <link rel="stylesheet" href="css/result.css">
+  <link rel="stylesheet" href="../resources/css/result.css">
  </head>
  <body>
 	<p>
